compiler/driver/tests/snapshots/fixtures__m4-enum__errors__guard-not-boolean.scoop.snap
---
source: compiler/driver/tests/fixtures.rs
expression: snapshot
---
== diagnostics ==
m4-enum/errors/guard-not-boolean.scoop:6:20: error: when guard must be Boolean, found Int
