compiler/driver/tests/snapshots/fixtures__m4-enum__errors__named-rest-missing.scoop.snap
---
source: compiler/driver/tests/fixtures.rs
expression: snapshot
---
== diagnostics ==
m4-enum/errors/named-rest-missing.scoop:5:9: error: pattern does not list all fields of struct `S`; add `..` to ignore the rest
m4-enum/errors/named-rest-missing.scoop:6:13: error: unknown variable `f1`
