compiler/driver/tests/snapshots/fixtures__m4-enum__errors__rest-twice.scoop.snap
---
source: compiler/driver/tests/fixtures.rs
expression: snapshot
---
== diagnostics ==
m4-enum/errors/rest-twice.scoop:3:20: error: `..` may appear at most once in a pattern
