compiler/driver/tests/snapshots/fixtures__m4-enum__errors__unknown-variant.scoop.snap
---
source: compiler/driver/tests/fixtures.rs
expression: snapshot
---
== diagnostics ==
m4-enum/errors/unknown-variant.scoop:7:15: error: enum `Color` has no variant `Yellow`
